<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/image1"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:contentDescription="@string/background" />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dim_50dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/textColor1"
        android:textSize="@dimen/dim_54sp"
        android:textStyle="italic|bold" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/dim_16dp"
        android:hint="@string/please_enter_your_name"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textColorHint="@color/textColor2"
        android:textSize="@dimen/dim_28sp" />

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dim_18dp"
        android:background="@drawable/shape"
        android:text="@string/let_s_go"
        android:textAllCaps="false"
        android:textColor="@color/textColor2"
        android:textSize="@dimen/dim_20sp"
        android:textStyle="bold" />

</RelativeLayout>