<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/image1"
    android:orientation="vertical"
    tools:context=".ScoreSheet">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/lin_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/thanks_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_8dp"
                android:background="@drawable/shape3"
                android:fontFamily="cursive"
                android:text="@string/thank_you"
                android:textAlignment="center"
                android:textColor="#F44336"
                android:textSize="@dimen/dim_54sp"
                android:textStyle="bold|italic" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dim_8dp"
                app:cardBackgroundColor="@color/background"
                app:cardCornerRadius="@dimen/dim_18dp"

                >

                <TextView
                    android:id="@+id/score_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/dim_8dp"
                    android:fontFamily="monospace"
                    android:textAlignment="center"
                    android:textColor="@color/textColor2"
                    android:textSize="@dimen/dim_28sp"
                    android:textStyle="bold|italic" />
            </android.support.v7.widget.CardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/lin_1"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/dim_18dp"
                android:background="@drawable/shape2"
                android:paddingEnd="@dimen/dim_18dp"
                android:paddingStart="@dimen/dim_8dp"
                android:text="@string/share_result"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dim_28sp" />

            <Button
                android:id="@+id/start_over"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape2"
                android:paddingEnd="@dimen/dim_18dp"
                android:paddingStart="@dimen/dim_8dp"
                android:text="@string/start_over"
                android:textColor="@android:color/white"
                android:textSize="@dimen/dim_28sp" />
        </LinearLayout>

    </RelativeLayout>


</ScrollView>